# capitalOps-API

./: .env.example  .gitignore  PLAN.md  README.md  SECURITY_REMEDIATION.md  main.py  pyproject.toml  railway.toml  requirements.txt
app/: __init__.py  models.py
app/routes/: auth.py  compat.py  dev.py  entitlement.py  execution.py  google_auth.py  vendor.py
app/services/: __init__.py  accela_client.py  arcgis_client.py  entitlement_poller.py
migrations/versions/: add_remaining_schema_columns.py
