[project]
name = "capitalops-backend"
version = "0.1.0"
description = "Capital + Governance Operating Layer API"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "APScheduler>=3.10.0",
    "cryptography>=44.0.0",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-jwt-extended>=4.7.1",
    "flask-migrate>=4.0.5",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=25.1.0",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.11.0",
    "requests>=2.31.0",
    "werkzeug>=3.1.6",
]

[tool.gunicorn]
bind = "0.0.0.0:3001"
workers = 2
timeout = 120
